--- a/devopsIQ/index.html
+++ b/devopsIQ/index.html
@@ -2,6 +2,7 @@
 <title>Jenkins Final Website</title>
 <body background="images/1.jpg">
   <h1> my changes </h1>
-  <h1>my shilpa <h1>
+  <h1>my shilpa </h1>
+    <h2> code changes </h2>
 </body>
 </html>
